Regression: all control interfaces impeded
Open a previously played file from the HTTP interface. Playback does not start as it should because Qt pauses the stream straight away for no good reasons.
Qt does ask the user to confirm resumption, but the user would probably not be using HTTP if it had access to the Qt UI. Though only tested via the browser, this probably affects popular remote control applications too.
The same problem affects D-Bus MPRIS and RC, and probably any interface or script able to add and start playlist items.