Qt: don't use a modal dialog for continuing the playback

Close #11705 #11703